termino de crear la tarea

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <section class="" id="seccionTablaTareas">
         <div class="d-flex justify-content-between align-items-center mb-3">
           <h1 class="mb-0">Listado de tareas</h1>
-          <!-- boton agregar tarea -->
+          <!-- boton agregar tarea, abrir modal-->
           <button type="button" class="btn btn-danger" id="btnAgregarTarea">
             <i class="bi bi-pc-display-horizontal"></i> Agregar Tarea
           </button>
@@ -190,22 +190,22 @@
                   </div>
                   <div class="col-md-6">
                     <div class="mb-3">
-                      <label for="fechaCrea" class="form-label"
-                        >Fecha de creación</label
+                      <label for="responsable" class="form-label"
+                        >Responsable</label
                       >
                       <input
-                        type="date"
+                        type="text"
                         class="form-control"
-                        id="fechaCrea"
+                        id="responsable"
                         required
                         minlength="3"
                       />
                       <div class="invalid-feedback">
-                        Por favor ingresa una fecha válida
+                        Por favor ingresa un nombre válido
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-6">
+                  <!-- <div class="col-md-6">
                     <div class="mb-3">
                       <label for="horaCrea" class="form-label">Hora</label>
                       <input
@@ -218,19 +218,19 @@
                         Por favor ingresa una hora válida
                       </div>
                     </div>
-                  </div>
+                  </div> -->
                   <div class="col-md-6">
                     <div class="mb-3">
-                      <label for="estado" class="form-label">Estado</label>
+                      <label for="urgencia" class="form-label">Urgencia</label>
                       <select
-                        name="estado"
+                        name="urgencia"
                         class="form-control"
-                        id="estado"
+                        id="urgencia"
                         required
                       >
-                        <option value="creado">Creado</option>
-                        <option value="en proceso">En proceso</option>
-                        <option value="terminado">Terminado</option>
+                        <option value="alta">Alta</option>
+                        <option value="media">Media</option>
+                        <option value="baja">Baja</option>
                       </select>
                     </div>
                   </div>
@@ -254,6 +254,7 @@
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./JS/app.js" type="module"></script>
   </body>
 </html>
