termino de colocar la fecha de edicion y el cambio entre los estados

--- a/index.html
+++ b/index.html
@@ -56,98 +56,100 @@
       </nav>
     </header>
     <main class="container my-4">
-      <section class="" id="seccionTablaTareas">
-        <div class="d-flex justify-content-between align-items-center mb-3">
-          <h1 class="mb-0">Listado de tareas</h1>
-          <!-- boton agregar tarea, abrir modal-->
-          <button type="button" class="btn btn-danger" id="btnAgregarTarea">
-            <i class="bi bi-pc-display-horizontal"></i> Agregar Tarea
-          </button>
-        </div>
-        <!-- tabla de datos -->
-        <div class="table-responsive">
-          <table class="table table-striped table-hover" id="tablaTarea">
-            <thead>
-              <tr>
-                <th scope="col">Tarea</th>
-                <th scope="col">Fecha creación</th>
-                <th scope="col">Hora de creacion</th>
-                <th scope="col">Estado</th>
-                <th scope="col">Acciones</th>
-              </tr>
-            </thead>
-            <!-- cuerpo de la tabla -->
-           <!--  <tbody id="tablaTareasBody">
-              <td>cocinar</td>
-              <td></td>
-              <td></td>
-              <td>
-                <button type="button" class="btn btn-primary me-1 btn-eliminar">
-                  Eliminar
-                </button>
-                <button type="button" class="btn btn-success me-1 btn-editar">
-                  Editar
-                </button>
-                <button type="button" class="btn btn-secondary btn-finalizar">
-                  Finalizar
-                </button>
-              </td>
-            </tbody> -->
-          </table>
-        </div>
-      </section>
-      <!-- detalle de tareas -->
-      <section class="d-none" id="seccionDetalleTarea">
+      <!-- detalle de tareas - ver mas-->
+      <section class="d-none w-50 mx-auto" id="seccionDetalleTarea">
         <nav aria-label="breadcrumb">
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item">
-              <a href="index.html" id="breadCrumbContacts">Listado de tareas</a>
-            </li>
-            <li
-              class="breadcrumb-item active"
-              aria-current="page"
-              id="breadCrumbContactName"
-            >
-              cocinar
-            </li>
-          </ol>
+          <ol class="breadcrumb"></ol>
         </nav>
         <article class="card mb-3">
           <div class="card-body">
-            <div class="d-flex align-items-center mb-3">
+            <div class="align-items-center mb-3">
               <div>
-                <h2 class="card-title mb-0" id="detalleTarea">Cocinar</h2>
+                <h2
+                  class="card-title mb-0 text-center text-danger"
+                  id="detalleTarea"
+                ></h2>
               </div>
             </div>
             <hr />
 
             <ul class="list-group list-group-flush">
               <li class="list-group-item">
-                Descripción de la tarea:
-                <span id="detalleDescripcion"> preparar las ollas</span>
+                <b class="pe-2">Descripción de la tarea:</b>
+                <span id="detalleDescripcion"></span>
               </li>
               <li class="list-group-item">
-                Responsable de la tarea:
-                <span id="detalleEmailInfo">Ignacio</span>
+                <b class="pe-2">Responsable de la tarea:</b>
+                <span id="detalleResponsable"></span>
               </li>
               <li class="list-group-item">
-                Estado:
-                <span id="detalleEmailInfo">En curso</span>
+                <b class="pe-2">Estado de edición:</b>
+                <span id="detalleEstado"></span>
               </li>
               <li class="list-group-item">
-                Fecha de creación:
-                <span id="detalleCompany">19-12-25</span>
-              
+                <b>Fecha y hora creación:</b>
+                <span id="detalleFechaCreacion"></span>
+              </li>
+              <li class="list-group-item">
+                <b class="pe-2">Fecha y hora última edición:</b>
+                <span id="detalleFechaEdic"></span>
               </li>
             </ul>
-            <h5 class="mt-4">Notas</h5>
-            <p id="detalleNotes">.</p>
           </div>
         </article>
-        <button class="btn btn-secondary mt-3" id="btnVolverLista">
-          <i class="bi bi-arrow-left-short"></i> Volver a la Lista
-        </button>
+        <div class="text-center mt-3">
+          <button class="btn btn-secondary my-3" id="btnVolverLista">
+            <i class="bi bi-arrow-left-short"></i> Volver a la Lista
+          </button>
+        </div>
       </section>
+
+      <section class="" id="seccionTablaTareas">
+        <div class="d-flex justify-content-between align-items-center my-3">
+          <h1 class="mb-0">Listado de tareas</h1>
+          <!-- boton agregar tarea, abrir modal-->
+          <button type="button" class="btn btn-danger" id="btnAgregarTarea">
+            <i class="bi bi-pc-display-horizontal"></i> Agregar Tarea
+          </button>
+        </div>
+
+        <!-- tabla de datos -->
+        <div class="table-responsive">
+          <table class="table table-striped table-hover" id="tablaTarea">
+            <thead>
+              <tr>
+                <th scope="col">Tarea</th>
+                <th scope="col">Responsable</th>
+                <th scope="col">Estado</th>
+                <th scope="col">Edición</th>
+              </tr>
+            </thead>
+            <!-- cuerpo de la tabla -->
+            <tbody id="tablaTareasBody">
+              <!-- <tr>
+                <td>cocinar</td>
+                <td></td>
+                <td></td>
+                <td>
+                  <button
+                    type="button"
+                    class="btn btn-primary me-1 btn-eliminar"
+                  >
+                    Eliminar
+                  </button>
+                  <button type="button" class="btn btn-success me-1 btn-editar">
+                    Editar
+                  </button>
+                  <button type="button" class="btn btn-secondary btn-finalizar">
+                    Finalizar
+                  </button>
+                </td>
+              </tr> -->
+            </tbody>
+          </table>
+        </div>
+      </section>
+
       <!-- modal tareas -->
       <div
         class="modal fade"
@@ -221,16 +223,16 @@
                   </div> -->
                   <div class="col-md-6">
                     <div class="mb-3">
-                      <label for="urgencia" class="form-label">Urgencia</label>
+                      <label for="urgencia" class="form-label">Estado</label>
                       <select
                         name="urgencia"
                         class="form-control"
                         id="urgencia"
                         required
                       >
-                        <option value="alta">Alta</option>
-                        <option value="media">Media</option>
-                        <option value="baja">Baja</option>
+                        <option value="Creada">Creada</option>
+                        <option value="En proceso">En proceso</option>
+                        <option value="Terminada">Terminada</option>
                       </select>
                     </div>
                   </div>
