agrego validaciones en js

--- a/index.html
+++ b/index.html
@@ -185,8 +185,7 @@
                         minlength="3"
                       />
                       <div class="invalid-feedback">
-                        Por favor ingresa un nombre válido (mínimo 3
-                        caracteres).
+                        Por favor ingresa un nombre de tarea válido (entre 3 y 50 caracteres).
                       </div>
                     </div>
                   </div>
@@ -203,7 +202,7 @@
                         minlength="3"
                       />
                       <div class="invalid-feedback">
-                        Por favor ingresa un nombre válido
+                        Por favor ingresa un nombre válido (entre 3 y 50 caracteres)
                       </div>
                     </div>
                   </div>
